package modelo;

public class Administrador extends Usuario {
    
    public Administrador(int id, String nome, String email, String senha) {
        super(id, nome, email, senha, 100);

    }
}
