package modelo;

public interface Avaliavel {
    void adicionarVoto(Voto voto);
    int getPontuacaoVotos();
}
