package modelo;

public enum EnumVoto {
    POSITIVO,
    NEGATIVO
}
